# LLVM-study

./: .gitignore  CMakeLists.txt  MyAnalysisPass.cpp  build.sh  test.cpp
DoubleFreeDetection/: CMakeLists.txt  DoubleFreePass.cpp  build.sh  test.cpp
MemoryLeakDetection/: .build.sh  CMakeLists.txt  MemoryLeakPass.cpp  test.cpp
TaintAnalysis/: CMakeLists.txt  TaintAnalysisPass.cpp  build.sh  test.cpp
Test/: MyAnalysisPass.cpp  build.sh
